# 23

./: .env  .env.template  .gitignore  README.md  docker-compose.yml  manage.py  populate_db.py  pyproject.toml  requirements.txt
catalog/: models.py  tests.py  urls.py  views.py
catalog/management/commands/: load_test_data.py
catalog/migrations/: 0001_initial.py
catalog/templates/catalog/: book_list.html  index.html
fixtures/: categories.json  products.json  products.json.py
myproject/: asgi.py  settings.py  urls.py
